frontend/barks-and-bubbles-frontend/src/app/app.component.scss
nav {
  position: sticky;
  top: 0;
  z-index: 20;
  display: flex;
  justify-content: space-between;
  flex-wrap: nowrap;
  height: 5em;
  align-items: center;

  h2 {
    color: white;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-style: normal;
    margin: 0.5em 0.1em;
  }

  .button-layout {
    display: flex;
  }

  div {
    button {
      margin-right: 2em;
    }
  }
}

form {
  padding: 1em;
}

#client-panel {
  height: 22em;
  width: 30em;
  right: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
}

#appointment-panel {
  height: 20em;
  width: 20em;
  right: 5%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex-wrap: wrap;
}

.panel-layout {
  background-color: white;
  border-radius: 1em;
  border: 1px solid #ededed;
  position: absolute;
  z-index: 10;
  box-shadow: 3px 3px 3px #afafaf;
}

.logo {
  object-fit: contain !important;
  height: 5.25em;
  padding: 1em 0.15em;
}

